package lab3.Characters;

public interface Can_Pick_up {
    public void Pick_up(Character_with_legs character, Character_with_legs_and_hands... characters);
}
