package lab3.Characters;

public interface Can_Stand {
    public  void Stand_up();
    public boolean Get_stand();
    public  void Fall();
}
