package lab3.Characters;

public abstract class Creature_with_name {
    String name;
    public abstract String Get_name();
}
