package lab3.Characters;

import lab3.Characters.Feellings;

public interface Sensitive {
    public void Feel(Feellings f);
}
