package lab3.Kucha_mala;

public interface Ending_in_kucha_mala {
    public void Happen(Kucha_mala kucha);
}
