package lab3.Kucha_mala;

public abstract class Event_with_place {
    protected String place;
    public abstract String Get_place();
}
