package lab3.Kucha_mala;

import lab3.Characters.Character_with_legs_and_hands;
import lab3.Kucha_mala.Kucha_mala;

public interface Pick_upping_in_kucha_mala {
    public void Happen(Kucha_mala kucha, int x, boolean first, Character_with_legs_and_hands... characters);
}
