package lab3.Kucha_mala;

import lab3.Kucha_mala.Kucha_mala;

public interface Stand_upping_from_kucha_mala {
    public void Happen(Kucha_mala kucha, int x, boolean flag);
}
