package lab3.Kucha_mala;

import lab3.Characters.Character;

public interface Writer_characters_enumeration {
    public void Write(Character... characters);
}
