package lab3.Sounds;

public interface Sounds {
    public void Sound();
}
