@startuml
interface lab3.Kucha_mala.Stand_upping_from_kucha_mala {
+ void Happen(Kucha_mala,int,boolean)
}
class lab3.Kucha_mala.My_kucha_mala_maker {
+ Kucha_mala Make(String,Character_with_legs)
+ String toString()
+ boolean equals(Object)
}
class lab3.Characters.Character {
+ <<Create>> Character(String)
+ String Get_name()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
abstract class lab3.Characters.Creature_with_name {
~ String name
+ {abstract}String Get_name()
}
abstract class lab3.Sounds.LoudSounds {
# Integer loudness
+ {abstract}void SetLoudness(int)
+ {abstract}int GetLoudness()
}
class lab3.Kucha_mala.Kucha_mala {
# ArrayList<Character_with_legs> kucha
+ <<Create>> Kucha_mala(String)
+ <<Create>> Kucha_mala()
+ Character_with_legs Get_end()
+ Character_with_legs Get(int)
+ Character_with_legs Get_top()
+ void Remove_top()
+ void Remove(int)
+ void Add(Character_with_legs)
+ String Get_place()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
class lab3.Sounds.Knock {
+ <<Create>> Knock(int)
+ void Sound()
+ void SetLoudness(int)
+ int GetLoudness()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
class lab3.Kucha_mala.My_pick_upping_from_kucha_mala {
# Character_with_legs Pick_up_from_kucha_mala(Kucha_mala,Character_with_legs_and_hands)
+ void Happen(Kucha_mala,int,boolean,Character_with_legs_and_hands)
+ String toString()
+ boolean equals(Object)
}
class lab3.Sounds.Crackle {
+ <<Create>> Crackle(String)
+ void Sound()
+ void SetMaterial(String)
+ String GetMaterial()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
interface lab3.Sounds.Sounds {
+ void Sound()
}
abstract class lab3.Sounds.MaterialSounds {
# String material
+ {abstract}void SetMaterial(String)
+ {abstract}String GetMaterial()
}
class lab3.Characters.Character_with_legs_and_hands_sensitive {
+ <<Create>> Character_with_legs_and_hands_sensitive(String)
+ void Feel(Feellings)
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
interface lab3.Characters.Can_Stand {
+ void Stand_up()
+ boolean Get_stand()
+ void Fall()
}
class lab3.Kucha_mala.My_stand_upping_from_kucha_mala {
# Character_with_legs Stand_up_from_kucha_mala(Kucha_mala)
+ void Happen(Kucha_mala,int,boolean)
+ String toString()
+ boolean equals(Object)
}
class lab3.Characters.Character_with_legs_and_hands {
+ <<Create>> Character_with_legs_and_hands(String)
+ void Pick_up(Character_with_legs,Character_with_legs_and_hands)
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}
class lab3.Kucha_mala.My_writer_characters_enumeration {
+ void Write(Character)
+ String toString()
+ boolean equals(Object)
}
abstract class lab3.Kucha_mala.Event_with_place {
# String place
+ {abstract}String Get_place()
}
class lab3.Main {
+ {static} void main(String[])
}
interface lab3.Characters.Can_Pick_up {
+ void Pick_up(Character_with_legs,Character_with_legs_and_hands)
}
interface lab3.Kucha_mala.Ending_in_kucha_mala {
+ void Happen(Kucha_mala)
}
interface lab3.Characters.Sensitive {
+ void Feel(Feellings)
}
interface lab3.Kucha_mala.Writer_characters_enumeration {
+ void Write(Character)
}
class lab3.Kucha_mala.My_ending_in_kucha_mala {
+ void Happen(Kucha_mala)
+ String toString()
+ boolean equals(Object)
}
interface lab3.Kucha_mala.Pick_upping_in_kucha_mala {
+ void Happen(Kucha_mala,int,boolean,Character_with_legs_and_hands)
}
interface lab3.Kucha_mala.Kucha_mala_maker {
+ Kucha_mala Make(String,Character_with_legs)
}
class lab3.Characters.Character_with_legs {
# {static} boolean stand
+ <<Create>> Character_with_legs(String)
+ void Stand_up()
+ boolean Get_stand()
+ void Fall()
+ String toString()
+ boolean equals(Object)
+ int hashCode()
}


lab3.Kucha_mala.Kucha_mala_maker <|.. lab3.Kucha_mala.My_kucha_mala_maker
lab3.Characters.Creature_with_name <|-- lab3.Characters.Character
lab3.Sounds.Sounds <|.. lab3.Sounds.LoudSounds
lab3.Kucha_mala.Event_with_place <|-- lab3.Kucha_mala.Kucha_mala
lab3.Sounds.LoudSounds <|-- lab3.Sounds.Knock
lab3.Kucha_mala.Pick_upping_in_kucha_mala <|.. lab3.Kucha_mala.My_pick_upping_from_kucha_mala
lab3.Sounds.MaterialSounds <|-- lab3.Sounds.Crackle
lab3.Sounds.Sounds <|.. lab3.Sounds.MaterialSounds
lab3.Characters.Sensitive <|.. lab3.Characters.Character_with_legs_and_hands_sensitive
lab3.Characters.Character_with_legs_and_hands <|-- lab3.Characters.Character_with_legs_and_hands_sensitive
lab3.Kucha_mala.Stand_upping_from_kucha_mala <|.. lab3.Kucha_mala.My_stand_upping_from_kucha_mala
lab3.Characters.Can_Pick_up <|.. lab3.Characters.Character_with_legs_and_hands
lab3.Characters.Character_with_legs <|-- lab3.Characters.Character_with_legs_and_hands
lab3.Kucha_mala.Writer_characters_enumeration <|.. lab3.Kucha_mala.My_writer_characters_enumeration
lab3.Kucha_mala.Ending_in_kucha_mala <|.. lab3.Kucha_mala.My_ending_in_kucha_mala
lab3.Characters.Can_Stand <|.. lab3.Characters.Character_with_legs
lab3.Characters.Character <|-- lab3.Characters.Character_with_legs
@enduml